<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.detail.NewsDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:expandedTitleMarginEnd="@dimen/activity_horizontal_margin"
                app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/label_movie_poster"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.PopularMovies.PopupOverlay"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="48dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    app:layout_constraintTop_toTopOf="@id/vote_average_icon"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average_icon"
                    app:layout_constraintStart_toStartOf="@id/title_textview"
                    app:layout_constraintEnd_toEndOf="@id/vote_average_textview"
                    android:background="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/vote_average_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_star_white"
                    android:contentDescription="@string/label_movie_average_vote" />

                <TextView
                    android:id="@+id/vote_average_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintStart_toEndOf="@id/vote_average_icon"
                    app:layout_constraintTop_toTopOf="@id/vote_average_icon"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average_icon"
                    tools:text="@string/placeholder_vote_average"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/release_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_date"
                    app:layout_constraintTop_toTopOf="@id/vote_average_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average_icon"/>

                <TextView
                    android:id="@+id/title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:text="@string/placeholder_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/vote_average_icon"/>

                <TextView
                    android:id="@+id/description_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/title_textview"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>